2002-12-10  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* modules.c (scm_export): new function

	* gc-card.c: add a note about malloc()/free() overhead.

2002-12-10  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* Makefile.am (c-tokenize.$(OBJEXT)): Don't look for c-tokenize.c
	in srcdir.

2002-12-10  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	These changes remove scm_ints_disabled (which hasn't has any
	effect in Guile for quite some time).
	
	* async.c, error.h (scm_ints_disabled): Removed.

	* gc.c (scm_gc_for_newcell), init.c (scm_init_guile_1),
	root.c (scm_internal_cwdr), gdbint.c (SCM_BEGIN_FOREIGN_BLOCK,
	SCM_END_FOREIGN_BLOCK): Don't touch scm_ints_disabled.
	(old_ints): Removed.

	* __scm.h (SCM_DEFER_INTS, SCM_ALLOW_INTS): Define as a recursive
	critical section.
	(SCM_REDEFER_INTS, SCM_ALLOW_INTS): Define as SCM_DEFER_INTS and
	SCM_ALLOW_INTS.

2002-12-09  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.c (scm_mutex_lock, scm_cond_wait, scm_cond_timedwait):
	Removed accidental #if 0 around these functions.

	These changes are the start of support for preemptive
	multithreading.  Marius and I have agreed that I commit this code
	into the repository although it isn't thoroughly tested and surely
	introduces many bugs.  The bugs should only be exposed when using
	threads, though.  Signalling and error handling for threads is
	very likely broken.  Work on making the implementation cleaner and
	more efficient is needed.
	
	* __scm.h (SCM_ALLOW_INTS_ONLY): Removed.
	(SCM_NONREC_CRITICAL_SECTION_START,
	SCM_NONREC_CRITICAL_SECTION_END, SCM_REC_CRITICAL_SECTION_START,
	SCM_REC_CRITICAL_SECTION_END): New macros.
	(SCM_CRITICAL_SECTION_START/END): Defined here.

	* eval.c: Insert SOURCE_SECTION_START / SOURCE_SECTION_END around
	the three calls to scm_m_expand_body.

	* gc.h: #include "libguile/pthread-threads.h";
	(SCM_FREELIST_CREATE, SCM_FREELIST_LOC): New macros.

	* gc.c (scm_i_freelist, scm_i_freelist2): Defined to be of type
	scm_t_key;
